--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
+    "firebase-admin": "^13.2.0",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
